# libhsts

./: .gitignore  .gitlab-ci.yml  AUTHORS  LICENSE  Makefile.am  NEWS  README.md  configure.ac  libhsts.pc.in
contrib/: mingw
docs/: Makefile.am  hsts-make-dafsa.md  hsts.md  libhsts.doxy.in  md2man.sh.in
include/: Makefile.am  libhsts.h.in
src/: LICENSE.chromium  Makefile.am  hsts-make-dafsa  hsts-make-dafsa.1  hsts.c  lookup_string_in_fixed_set.c
tests/: Makefile.am  test-hsts.c
tools/: Makefile.am  hsts.1  hsts.c
